Homepage now loading with products

--- a/src/main/webapp/WEB-INF/templates/home.html
+++ b/src/main/webapp/WEB-INF/templates/home.html
@@ -79,7 +79,7 @@
 
 
             <!-- DESCRIZIONE PRODOTTO -->
-            <td th:text="${productInfo1.productDescription}"></td>
+            <td th:text="${productInfo1.productDescription}">No desc</td>
 
 
             <!-- PREZZO PRODOTTO -->
