User's orders OK

--- a/src/main/webapp/css/global.css
+++ b/src/main/webapp/css/global.css
@@ -335,10 +335,18 @@ fieldset{
     display: none;
 }
 
+#shopping-cart-div-message {
+    display: none;
+}
+
 #orders-div {
+    display: none;
+}
+#orders-error-div{
     display: none;
 }
 
 #search-form-error {
     display: none;
 }
+
