ShoppingCart client-side now working properly
Html table yet to be populated using DOM

--- a/src/main/webapp/css/global.css
+++ b/src/main/webapp/css/global.css
@@ -322,6 +322,12 @@ fieldset{
     font-size: 1rem;
 }
 
+.buy-btn {
+    /*
+    Just for references purpose
+     */
+}
+
 
 #products-table-div {
     display: none;
