--- a/src/main/webapp/WEB-INF/templates/searchProducts.html
+++ b/src/main/webapp/WEB-INF/templates/searchProducts.html
@@ -52,7 +52,7 @@
                     <th colspan="2" scope="col">Product</th>
                     <th scope="col">Description</th>
                     <th scope="col">Cost</th>
-                    <th colspan="2" scope="col">Supplier</th>
+                    <th scope="col">Supplier</th>
                     <th scope="col">Add to cart</th>
                     <th colspan="4" scope="col"></th>
                 </tr>
@@ -82,9 +82,6 @@
                         <img th:src="'https://tiw21marketplace.s3.eu-south-1.amazonaws.com/images/suppliers/'+ ${productInfo1.supplier.imagePath}" alt="supplier-image"/>
                     </td>
 
-                    <!-- NOME SUPPLIER -->
-                    <td th:text="${productInfo1.supplierName}">Supplier name</td>
-
                     <!-- BUY BUTTON -->
                     <td>
                         <form th:action="${#request.contextPath} + '/products/AddToCart'"  th:object="${productInfo1}" method="POST">
@@ -102,7 +99,6 @@
                     <td colspan="7">
                         <table class="styled-table" th:if="${selectedProductId.equals(productInfo1.productId)}" >
                             <thead>
-
                             <tr>
                                 <th scope="col">Supplier</th>
                                 <th scope="col">Cost</th>
@@ -113,80 +109,81 @@
                                 <th scope="col">Amount</th>
                                 <th scope="col">Add to cart</th>
                             </tr>
-
                             </thead>
-                            <tr th:each="supplierProduct : ${products.supplierProductMap.get(selectedProductId)}">
+                            <tbody>
+                                <tr th:each="supplierProduct : ${products.supplierProductMap.get(selectedProductId)}">
 
-                                <!-- IMMAGINE SUPPLIER -->
-                                <td class="table-supplier-img">
-                                    <img th:src="'https://tiw21marketplace.s3.eu-south-1.amazonaws.com/images/suppliers/'+ ${supplierProduct.supplier.imagePath}" alt="supplier-image" src="../../images/suppl-ex.png"/>
-                                </td>
+                                    <!-- IMMAGINE SUPPLIER -->
+                                    <td class="table-supplier-img">
+                                        <img th:src="'https://tiw21marketplace.s3.eu-south-1.amazonaws.com/images/suppliers/'+ ${supplierProduct.supplier.imagePath}" alt="supplier-image" src="../../images/suppl-ex.png"/>
+                                    </td>
 
-                                <!-- PREZZO PRODOTTO -->
-                                <td>&euro; <span th:text="${#numbers.formatDecimal(supplierProduct.supplierProductCost, 1, 2, 'COMMA')}">10.00</span> </td>
+                                    <!-- PREZZO PRODOTTO -->
+                                    <td>&euro; <span th:text="${#numbers.formatDecimal(supplierProduct.supplierProductCost, 1, 2, 'COMMA')}">10.00</span> </td>
 
-                                <!-- RATING SUPPLIER -->
-                                <td th:text="${supplierProduct.supplier.supplierRating}">0.0</td>
+                                    <!-- RATING SUPPLIER -->
+                                    <td th:text="${supplierProduct.supplier.supplierRating}">0.0</td>
 
-                                <!-- SUPPLIER FREE SHIPPING YES -->
-                                <td th:if="${supplierProduct.supplier.hasFreeShipping}" >&euro; <span th:text="${#numbers.formatDecimal(supplierProduct.supplier.freeShippingMinAmount, 1, 2, 'COMMA')}">10.00</span> </td>
+                                    <!-- SUPPLIER FREE SHIPPING YES -->
+                                    <td th:if="${supplierProduct.supplier.hasFreeShipping}" >&euro; <span th:text="${#numbers.formatDecimal(supplierProduct.supplier.freeShippingMinAmount, 1, 2, 'COMMA')}">10.00</span> </td>
 
-                                <!-- SUPPLIER FREE SHIPPING NO -->
-                                <td th:if="${!supplierProduct.supplier.hasFreeShipping}" th:text="'No'"></td>
+                                    <!-- SUPPLIER FREE SHIPPING NO -->
+                                    <td th:if="${!supplierProduct.supplier.hasFreeShipping}" th:text="'No'"></td>
 
-                                <!-- SUPPLIER RANGE COSTS -->
-                                <td>
-                                    <table class="styled-table">
-                                        <thead>
-                                        <tr>
-                                            <th scope="col">Range</th>
-                                            <th scope="col">minItem</th>
-                                            <th scope="col">maxItem</th>
-                                            <th scope="col">cost</th>
-                                        </tr>
-                                        </thead>
-                                        <tr th:each="range : ${supplierProduct.supplier.supplierShippingPolicy.ranges}" >
-                                            <td th:text="${supplierProduct.supplier.supplierShippingPolicy.ranges.indexOf(range) + 1}">1</td>
-                                            <td th:text="${range.minAmount}">1</td>
-                                            <td th:text="${range.maxAmount}">5</td>
-                                            <td>&euro; <span th:text="${#numbers.formatDecimal(range.cost, 1, 2, 'COMMA')}">10.00</span> </td>
-                                        </tr>
-                                    </table>
-                                </td>
+                                    <!-- SUPPLIER RANGE COSTS -->
+                                    <td>
+                                        <table class="styled-table">
+                                            <thead>
+                                            <tr>
+                                                <th scope="col">Range</th>
+                                                <th scope="col">minItem</th>
+                                                <th scope="col">maxItem</th>
+                                                <th scope="col">cost</th>
+                                            </tr>
+                                            </thead>
+                                            <tr th:each="range : ${supplierProduct.supplier.supplierShippingPolicy.ranges}" >
+                                                <td th:text="${supplierProduct.supplier.supplierShippingPolicy.ranges.indexOf(range) + 1}">1</td>
+                                                <td th:text="${range.minAmount}">1</td>
+                                                <td th:text="${range.maxAmount}">5</td>
+                                                <td>&euro; <span th:text="${#numbers.formatDecimal(range.cost, 1, 2, 'COMMA')}">10.00</span> </td>
+                                            </tr>
+                                        </table>
+                                    </td>
 
-                                <!-- HOW MANY ITEMS -->
-                                <td th:if="${session.shoppingCart.totalItemsBySupplier.get(supplierProduct.supplierId)}" th:text="${session.shoppingCart.totalItemsBySupplier.get(supplierProduct.supplierId)}" >3</td>
-                                <td th:unless="${session.shoppingCart.totalItemsBySupplier.get(supplierProduct.supplierId)}" >0</td>
-
-
-                                <!-- HOW MUCH TOTAL -->
-                                <td th:if="${session.shoppingCart.totalAmountBySupplier.get(supplierProduct.supplierId)}">&euro; <span th:text="${#numbers.formatDecimal(session.shoppingCart.totalAmountBySupplier.get(supplierProduct.supplierId), 1, 2, 'COMMA')}">10.00</span> </td>
-                                <td th:unless="${session.shoppingCart.totalAmountBySupplier.get(supplierProduct.supplierId)}">&euro; <span th:text="${#numbers.formatDecimal(0, 1, 2, 'COMMA')}">10.00</span> </td>
+                                    <!-- HOW MANY ITEMS -->
+                                    <td th:if="${session.shoppingCart.totalItemsBySupplier.get(supplierProduct.supplierId)}" th:text="${session.shoppingCart.totalItemsBySupplier.get(supplierProduct.supplierId)}" >3</td>
+                                    <td th:unless="${session.shoppingCart.totalItemsBySupplier.get(supplierProduct.supplierId)}" >0</td>
 
 
-                                <!-- ADD TO CART FORM -->
-                                <td>
-                                    <form th:action="${#request.contextPath} + '/products/AddToCart'" method="POST">
-                                        <label for="howMany">How many:</label>
-                                        <select name="howMany" id="howMany">
-                                            <option value="1">1</option>
-                                            <option value="2">2</option>
-                                            <option value="3">3</option>
-                                            <option value="4">4</option>
-                                            <option value="5">5</option>
-                                            <option value="6">6</option>
-                                            <option value="7">7</option>
-                                            <option value="8">8</option>
-                                            <option value="9">9</option>
-                                        </select>
-                                        <input type="hidden" th:value="${supplierProduct.productId}"    name="productId" />
-                                        <input type="hidden" th:value="${supplierProduct.supplierId}"   name="supplierId" />
-                                        <input type="hidden" th:value="${supplierProduct.supplierProductCost}"   name="supplierProductCost" />
-                                        <input type="submit" class="clickable-link clickable-link-medium" value="Add to cart">
-                                    </form>
-                                </td>
+                                    <!-- HOW MUCH TOTAL -->
+                                    <td th:if="${session.shoppingCart.totalAmountBySupplier.get(supplierProduct.supplierId)}">&euro; <span th:text="${#numbers.formatDecimal(session.shoppingCart.totalAmountBySupplier.get(supplierProduct.supplierId), 1, 2, 'COMMA')}">10.00</span> </td>
+                                    <td th:unless="${session.shoppingCart.totalAmountBySupplier.get(supplierProduct.supplierId)}">&euro; <span th:text="${#numbers.formatDecimal(0, 1, 2, 'COMMA')}">10.00</span> </td>
 
-                            </tr>
+
+                                    <!-- ADD TO CART FORM -->
+                                    <td>
+                                        <form th:action="${#request.contextPath} + '/products/AddToCart'" method="POST">
+                                            <label for="howMany">How many:</label>
+                                            <select name="howMany" id="howMany">
+                                                <option value="1">1</option>
+                                                <option value="2">2</option>
+                                                <option value="3">3</option>
+                                                <option value="4">4</option>
+                                                <option value="5">5</option>
+                                                <option value="6">6</option>
+                                                <option value="7">7</option>
+                                                <option value="8">8</option>
+                                                <option value="9">9</option>
+                                            </select>
+                                            <input type="hidden" th:value="${supplierProduct.productId}"    name="productId" />
+                                            <input type="hidden" th:value="${supplierProduct.supplierId}"   name="supplierId" />
+                                            <input type="hidden" th:value="${supplierProduct.supplierProductCost}"   name="supplierProductCost" />
+                                            <input type="submit" class="clickable-link clickable-link-medium" value="Add to cart">
+                                        </form>
+                                    </td>
+
+                                </tr>
+                            </tbody>
                         </table>
                     </td>
                 </tr>
