Shopping cart working properly

--- a/src/main/webapp/css/global.css
+++ b/src/main/webapp/css/global.css
@@ -328,6 +328,12 @@ fieldset{
      */
 }
 
+.cart-table {
+    /*
+    Just for references purpose
+     */
+}
+
 
 #products-table-div {
     display: none;
