--- a/src/main/webapp/css/global.css
+++ b/src/main/webapp/css/global.css
@@ -334,6 +334,24 @@ fieldset{
      */
 }
 
+.modal {
+    display: none;
+    position: fixed;
+    padding-top: 50px;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgb(0, 0, 0);
+    background-color: rgba(0, 0, 0, 0.5);
+}
+.modal-content {
+    position: relative;
+    background-color: white;
+    padding: 20px;
+    margin: auto;
+    width: 75%;
+}
 
 #products-table-div {
     display: none;
